first-commit-SPC

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>HEllO INOKUN_home</title>
+  <title>HEllO INOKUN_gallery</title>
   <meta name="vewport" content="width=device-width">
   <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/menu/home.css">
+  <link rel="stylesheet" href="css/menu/gallery.css">
   <LINK rel="SHORTCUT ICON" href="img/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Spectral+SC" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
@@ -22,7 +22,8 @@
     <!--ここから-->
     <script>
       var a = ["Life is the time of almsgiving.", "Want to make the best out of my life.", "Easy to live .Thought is high."];
-      /*伊野くん名言集*//*人生は施しの時間である。*/ /*できるだけ楽して生きたい。*//*私は私が取り得る最善の行動をするだけである*/
+      /*伊野くん名言集*/
+      /*人生は施しの時間である。*/ /*できるだけ楽して生きたい。*/ /*私は私が取り得る最善の行動をするだけである*/
       var x;
       x = Math.floor(Math.random() * 3);
       document.write(a[x]);
@@ -42,12 +43,16 @@
   </div>
 
   <div class="text">
-    <h2>Home</h2>
-    <p>Hello everyone!</p><!--こんにちは皆さん。-->
-    <p>A long time has passed since we met Ino-Kun.</p><!--私たちがいのくんと出会ってから長い時間が経ちました。-->
-    <p>How much you know the character him ?</p><!--あなたはいのくんという人物をどれだけ知っていますか-->
-    <p>Now you will know a lot about him.</p><!--今からあなたはいの君について多くのことを知るだろう。-->
-    <p>Have a good time.</p><!--よい時間を。-->
+    <h2>Gallery</h2>
+    <a href="pic/p1.html"><span title="He has a cat."><img id="p1" src="img/pic/p1.jpg" height="350px"></span></a>
+    <a href="pic/p2.html"><span title="Picture of when he visited Shiraito Falls."><img id="p2" src="img/pic/p2.jpg" height="350px"></span></a>
+    <a href="pic/p3.html"><span title="A picture he painted."><img id="p3" src="img/pic/p3.jpg" height="350px"></span></a>
+    <a href="pic/p4.html"><span title="He likes Spicy taste."><img id="p4" src="img/pic/p4.jpg" height="350px"></span></a>
+    <a href="pic/p5.html"><span title="Picture of when he visited Osaka."><img id="p5" src="img/pic/p5.jpg" height="350px"></span></a>
+    <a href="pic/p6.html"><span title="He wants is this."><img id="p6" src="img/pic/p6.jpg" width="350px" height="350px"></span></a>
+    <a href="pic/p7.html"><span title="He wants is this."><img id="p7" src="img/pic/p7.jpg" height="350px"></span></a>
+    <a href="pic/p8.html"><span title="Was delicious."><img id="p8" src="img/pic/p8.jpg" height="350px"></span></a>
+    <a href="pic/p9.html"><span title="Was delicious."><img id="p8" src="img/pic/p9.jpg" height="350px"></span></a>
   </div>
 
   <div class=" foot">
