--- a/public/profile.html
+++ b/public/profile.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>HEllO INOKUN_home</title>
+  <title>HEllO INOKUN_profile</title>
   <meta name="vewport" content="width=device-width">
   <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/menu/home.css">
+    <link rel="stylesheet" href="css/menu/profile.css">
   <LINK rel="SHORTCUT ICON" href="img/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Spectral+SC" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
@@ -31,7 +31,7 @@
   </div>
   <div class="main">
     <div class="menu">
-      <a id="home" href="index.html">Home</a>
+      <a id="index" href="index.html">Home</a>
       <a id="about" href="about.html">About</a>
       <a id="profile" href="profile.html">Profile</a>
       <a id="liking" href="liking.html">Liking</a>
@@ -42,12 +42,17 @@
   </div>
 
   <div class="text">
-    <h2>Home</h2>
-    <p>Hello everyone!</p><!--こんにちは皆さん。-->
-    <p>A long time has passed since we met Ino-Kun.</p><!--私たちがいのくんと出会ってから長い時間が経ちました。-->
-    <p>How much you know the character him ?</p><!--あなたはいのくんという人物をどれだけ知っていますか-->
-    <p>Now you will know a lot about him.</p><!--今からあなたはいの君について多くのことを知るだろう。-->
-    <p>Have a good time.</p><!--よい時間を。-->
+    <h2>Profile</h2>
+    <p>- Name -<br>Hiroki Inoue</p><!--名前-->
+    <p>- Nickname -<br>Ino-Kun</p><!--あだ名-->
+    <p>- Age -<br>19</p><!--年齢-->
+    <p>- DOB -<br>April 7, 1998</p><!--誕生日　１９９８年4月７日-->
+    <p>- Constellation -<br>Aries</p><!--星座　牡羊座-->
+    <p>- From -<br>Soja-shi Okayama</p><!--出身　岡山県総社市-->
+    <p>- Blood type -<br>AB</p><!--血液型　AB-->
+    <p>- height -<br>height</p><!--身長-->
+    <p>- weight -<br>weight</p><!--体重-->
+    <!--<p>Health conditions :</p>-->
   </div>
 
   <div class=" foot">
