--- a/public/about.html
+++ b/public/about.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>HEllO INOKUN_home</title>
+  <title>HEllO INOKUN_about</title>
   <meta name="vewport" content="width=device-width">
   <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/menu/home.css">
+  <link rel="stylesheet" href="css/menu/about.css">
   <LINK rel="SHORTCUT ICON" href="img/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Spectral+SC" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
@@ -31,7 +31,7 @@
   </div>
   <div class="main">
     <div class="menu">
-      <a id="home" href="index.html">Home</a>
+      <a id="index" href="index.html">Home</a>
       <a id="about" href="about.html">About</a>
       <a id="profile" href="profile.html">Profile</a>
       <a id="liking" href="liking.html">Liking</a>
@@ -42,12 +42,10 @@
   </div>
 
   <div class="text">
-    <h2>Home</h2>
-    <p>Hello everyone!</p><!--こんにちは皆さん。-->
-    <p>A long time has passed since we met Ino-Kun.</p><!--私たちがいのくんと出会ってから長い時間が経ちました。-->
-    <p>How much you know the character him ?</p><!--あなたはいのくんという人物をどれだけ知っていますか-->
-    <p>Now you will know a lot about him.</p><!--今からあなたはいの君について多くのことを知るだろう。-->
-    <p>Have a good time.</p><!--よい時間を。-->
+    <h2>About</h2>
+    <p>This site is for introducing Ino-Kun.</p><!--このサイトは、いの君を紹介するためのものです。-->
+    <p>I thank Ino-Kun for providing information</p><!--情報を提供してくれたいの君に感謝します-->
+    <p>and also to you watching this</p>
   </div>
 
   <div class=" foot">
